[package]
name = "color_stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
exr = { version = "1.72.0", optional = true }
nalgebra = "0.33.0"
png = { version = "0.17.14", optional = true }
rcms = { version = "0.1.0", optional = true }

[features]
exr = ["dep:exr"]
png = ["dep:png"]
rcms = ["dep:rcms"]
